# open-stellar-passport

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: security-audit.yml
circuits/: agent_passport.circom  passport_witness.circom
config/: testnet.d.mts  testnet.mjs
contracts/agent-passport-validator/: Cargo.toml  verifier.wasm
contracts/agent-passport-validator/src/: lib.rs  test.rs
contracts/validator-wasm/: agent_passport_validator.wasm
deploy/: deployer.txt  validator-contract-id.txt  verifier-contract-id.txt
design-system/: _tokens.css  controls.html  foundations.html  passport-card.html  payment-gate.html  proof-console.html
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/zk/: agent_passport.wasm  passport_witness.wasm  spent_proof.json  spent_public.json  verification_key.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Brand.tsx  PassportCard.tsx  ui.tsx
frontend/src/lib/: passport-store.ts  passport.test.ts  passport.ts  rate-limit.ts  snarkjs.d.ts  testnetConfig.ts  (+1 more)
lib/passport/: passport.ts
scripts/: gen-proof.mjs  smoke-onchain.mjs  smoke.mjs  wsl-build-validator.sh  wsl-build-verifier.sh  wsl-deploy-validator.sh  wsl-deploy-verifier.sh  wsl-gen-bindings.sh  wsl-invoke-verify.sh  wsl-negative-test.sh  wsl-setup.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/bindings/: README.md  package-lock.json  package.json
sdk/examples/: register.ts
sdk/src/: index.ts  passport.ts  snarkjs.d.ts
(+5 files in other folders)
