[package]
name = "agent-passport-validator"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "26", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
codegen-units = 1
lto = true
panic = "abort"
